--- a/build.csproj
+++ b/build.csproj
@@ -172,6 +172,7 @@
     <None Include="product\config\app.config.template" />
     <None Include="product\config\hibernate.cfg.xml.template" />
     <None Include="product\config\log4net.config.xml.template" />
+    <None Include="product\config\our_custom_micro_configuration.txt.template" />
     <None Include="product\sql\data\001\001_populate_foo.sql.template" />
     <None Include="product\sql\ddl\001\001_db.sql.template" />
     <None Include="product\sql\ddl\001\002_security.sql.template" />
