--- a/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
+++ b/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
@@ -50,8 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MessageGenerator.cs" />
+    <Compile Include="web\core\CommandRegistry.cs" />
+    <Compile Include="web\core\DefaultFrontController.cs" />
     <Compile Include="web\core\FrontController.cs" />
     <Compile Include="web\core\RawHandler.cs" />
+    <Compile Include="web\core\Request.cs" />
+    <Compile Include="web\core\RequestCommand.cs" />
     <Compile Include="web\core\RequestFactory.cs" />
   </ItemGroup>
   <ItemGroup />
