Working on the ViewMainDepartments

--- a/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
+++ b/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
@@ -50,15 +50,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MessageGenerator.cs" />
+    <Compile Include="tasks\DepartmentsRepository.cs" />
     <Compile Include="web\application\catalogbrowsing\Blah.cs" />
     <Compile Include="web\core\ApplicationCommand .cs" />
     <Compile Include="web\core\CommandRegistry.cs" />
     <Compile Include="web\core\DefaultCommandRegistry.cs" />
     <Compile Include="web\core\DefaultFrontController.cs" />
     <Compile Include="web\core\DefaultRequestCommand.cs" />
-    <Compile Include="web\core\Department.cs" />
-    <Compile Include="web\core\DepartmentListRenderer.cs" />
-    <Compile Include="web\core\DepartmentsDataAccessor.cs" />
     <Compile Include="web\core\FrontController.cs" />
     <Compile Include="web\core\MissingCommandFactory.cs" />
     <Compile Include="web\core\MissingRequestCommand.cs" />
@@ -69,6 +67,7 @@
     <Compile Include="web\core\RequestCriteria.cs" />
     <Compile Include="web\core\RequestFactory.cs" />
     <Compile Include="web\core\ViewMainDepartments.cs" />
+    <Compile Include="web\model\Department.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
