Working on the view departments in a department

--- a/product/config/app.config.template
+++ b/product/config/app.config.template
@@ -20,9 +20,9 @@
     </pages>
     <authentication mode="Windows"/>
     <httpHandlers>
-      <add path=""
+      <add path="*.invision"
         verb="*"
-        type=""/>
+        type="nothinbutdotnetstore.web.core.RawHandler,nothinbutdotnetstore"/>
     </httpHandlers>
 
    </system.web>
