--- a/product/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
+++ b/product/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
@@ -72,6 +72,7 @@
     <Compile Include="utility\BaseConcern.cs" />
     <Compile Include="utility\ObjectMother.cs" />
     <Compile Include="web\CommandRegistrySpecs.cs" />
+    <Compile Include="web\core\ViewDepartmentsInDepartmentSpecs.cs" />
     <Compile Include="web\core\ViewMainDepartmentsSpecs.cs" />
     <Compile Include="web\FrontControllerSpecs.cs" />
     <Compile Include="web\RawHandlerSpecs.cs" />
