--- a/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
+++ b/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
@@ -51,11 +51,14 @@
   <ItemGroup>
     <Compile Include="MessageGenerator.cs" />
     <Compile Include="tasks\Catalog.cs" />
-    <Compile Include="tasks\stubs\StubDepartmentRepository.cs" />
+    <Compile Include="tasks\stubs\StubCatalog.cs" />
     <Compile Include="web\application\catalogbrowsing\Blah.cs" />
     <Compile Include="web\core\ApplicationCommand .cs" />
-    <Compile Include="web\core\CatalogCommand.cs" />
+    <Compile Include="web\core\GetTheMainDepartments.cs" />
+    <Compile Include="web\core\GetTheReportModel.cs" />
+    <Compile Include="web\core\ReportingCommand.cs" />
     <Compile Include="web\core\CommandRegistry.cs" />
+    <Compile Include="web\core\stubs\GetTheProductsInADepartment.cs" />
     <Compile Include="web\core\ViewProductsInDepartment.cs" />
     <Compile Include="web\core\DefaultCommandRegistry.cs" />
     <Compile Include="web\core\DefaultFrontController.cs" />
