--- a/product/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
+++ b/product/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
@@ -71,10 +71,12 @@
     <Compile Include="MessageGeneratorSpecs.cs" />
     <Compile Include="utility\BaseConcern.cs" />
     <Compile Include="utility\ObjectMother.cs" />
+    <Compile Include="web\core\RendererSpecs.cs" />
     <Compile Include="web\core\ViewProductsInDepartmentSpecs.cs" />
     <Compile Include="web\CommandRegistrySpecs.cs" />
     <Compile Include="web\core\ViewDepartmentsInDepartmentSpecs.cs" />
     <Compile Include="web\core\ViewMainDepartmentsSpecs.cs" />
+    <Compile Include="web\core\WebFormTemplateSpecs.cs" />
     <Compile Include="web\FrontControllerSpecs.cs" />
     <Compile Include="web\RawHandlerSpecs.cs" />
     <Compile Include="web\RequestCommandSpecs.cs" />
