--- a/product/nothinbutdotnetstore.web.ui/nothinbutdotnetstore.web.ui.csproj
+++ b/product/nothinbutdotnetstore.web.ui/nothinbutdotnetstore.web.ui.csproj
@@ -49,6 +49,10 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="views\DepartmentBrowser.aspx.cs">
+      <DependentUpon>DepartmentBrowser.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="views\Store.master.cs">
       <DependentUpon>Store.master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
